<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TakeBreak</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>

    
    <string name="pref_workPhaseLength_title">Work Phase Length</string>
    <string name="pref_workPhaseLength_summary">Length of work phase in minutes.</string>
    
    <string name="pref_restPhaseLength_title">Rest Phase Length</string>
    <string name="pref_restPhaseLength_summary">Length of rest phase in minutes.</string>
    
    <string name="pref_alertViaSound_title">Alert Via Sound</string>
    <string name="pref_alertViaSound_summary">Alert via sound.</string>

    <string name="pref_alertViaVibration_title">Alert Via Vibration</string>
    <string name="pref_alertViaVibration_summary">Alert via vibration.</string>

    <string name="pref_alertRepetition_title">Alert Repetitions</string>
    <string name="pref_alertRepetitionh_summary">Number of repetitions (with approx 2 seconds apart) of phase change sound/vibration. The number includes the first one, so have it >=1.</string>

    <string name="pref_autoPhaseChange_title">Auto Phase Change</string>
    <string name="pref_autoPhaseChange_summary">Phases changes automatically with just one sound/vib alert.</string>

    <string name="pref_keepPhoneAwake_title">Keep Phone Awake</string>
    <string name="pref_keepPhoneAwake_summary">Keep phone awake when this app is visible.</string>

    
    <string name="clock_default_text">00:00</string>
    <string name="timer_on_chkbox">On</string>
    <string name="str_phase_btn_in_work">Take a break</string>
    <string name="str_phase_btn_in_rest">Get to work</string>
    <string name="str_phase_in_work_statustext">Working.</string>
    <string name="str_phase_in_rest_statustext">Having a break.</string>
    <string name="str_time_caption">Time left&#58;</string>
    <string name="str_overdue">overdue!</string>
    <string name="str_confirm_app_close">The timer is started.\nPress &#60;Back&#62; again if you really want to quit.</string>
    <string name="str_settings_caption">Settings</string>
    <string name="str_timer_is_off">Timer is off (paused).</string>
    
</resources>
