<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="tbandlxvi.takebreak.MainActivity" >

<!--     <LinearLayout  -->
<!--         android:layout_width="match_parent" -->
<!--         android:layout_height="wrap_content" -->
<!--         android:orientation="horizontal" > -->
            
<!-- 	    <TextView -->
<!-- 	        android:id="@+id/phase_statustext" -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:textSize="15sp" -->
<!-- 	        android:text="@string/str_phase_in_work_statustext" /> -->
	        
<!-- 	    <TextView -->
<!-- 	        android:id="@+id/clock_text" -->
<!-- 	        android:layout_width="wrap_content" -->
<!-- 	        android:layout_height="wrap_content" -->
<!-- 	        android:typeface="monospace" -->
<!-- 	        android:textSize="15sp" -->
<!-- 	        android:text="@string/clock_default_text" /> -->

<!-- 	    </LinearLayout > -->

	    <TextView
	        android:id="@+id/phase_statustext"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:text="@string/str_phase_in_work_statustext" />

	    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <TextView
	        android:id="@+id/time_caption"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="18sp"
	        android:layout_marginRight="5sp"
	        android:text="@string/str_time_caption" />
	    	        
	    <TextView
	        android:id="@+id/clock_text"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:typeface="monospace"
	        android:textSize="18sp"
	        android:text="@string/clock_default_text" />
	    </LinearLayout >
	    
    <Button
        android:id="@+id/phase_btn"
   		android:layout_width="wrap_content"
   		android:layout_height="wrap_content"
   		android:onClick="onButtonClicked"
   		android:enabled="false"
   		android:text="@string/str_phase_btn_in_work"/>
    
    <CheckBox 
        android:id="@+id/timer_on_chkbox"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:textSize="18sp"
       	android:onClick="onCheckboxClicked"
       	android:layout_marginTop="7sp"
       	android:text="@string/timer_on_chkbox"/>  

</LinearLayout>
